--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -21,6 +21,15 @@ h6 {
   color: ksi-color('primary-dark');
 }
 
+.org-index-name {
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: ksi-color('primary-dark');
+  text-align: center;
+  margin: 5px;
+}
+
 .org-caption-images {
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
