--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -10,10 +10,15 @@
           <h5 id="org-name" class="inline" style="color: #39393a"> {{model.author.full_name}}</h5>{{/link-to}}
           <p class="task-points inline">Max. {{model.max_score}} bodů</p>
         </div>
+        <div class="row" style="padding-left:5px; margin-left: 20px">
+          <h5 class="inline">Termín odevzdání: </h5>
+          <p class="task-points inline">{{model.time_deadline}}</p>
+        </div>
+
         <div class="row" style="margin-top: 20px">
             <nav class="navbar navbar-uloha" role="navigation">
                 <div class="navbar-header page-scroll">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="bs-task-navbar-collapse">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-task-navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
