--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -12,7 +12,7 @@
         </div>
         <div class="row" style="padding-left:5px; margin-left: 20px">
           <h5 class="inline">Termín odevzdání: </h5>
-          <p class="task-points inline">{{model.time_deadline}}</p>
+          <p class="task-points inline">{{date-and-time model.time_deadline 'cs'}}</p>
         </div>
 
         <div class="row" style="margin-top: 20px">
