Implement password change

--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -14,7 +14,7 @@
 						<img src="img/nodes/base/node-red.svg" class="node-info"/>Speciální úloha<br>
 						<img src="img/nodes/base/node-orange.svg" class="node-info"/>Teoretická úloha<br>
 						<img src="img/nodes/base/node-bronze-unknown.svg" class="node-info"/>Úloha s překvapením<br>
-						<img src="img/nodes/base/node-orange-blue.svg" class="node-info"/>Smíchaná úloha<br>
+						<img src="img/nodes/base/node-orange-blue.svg" class="node-info"/>Smíšená úloha<br>
 						<img src="img/nodes/base/node-big.svg" class="node-info-big"/>Velká úloha<br><!--TODO-->
 						<hr>
 						<img src="img/nodes/base/node-locked.svg" class="node-info"/>Uzamčená úloha<br>
