--- a/app/templates/settings/password.hbs
+++ b/app/templates/settings/password.hbs
@@ -10,6 +10,15 @@
 		{{input value=new_password type="password" name="pass" placeholder="nové heslo" required=true title="Musíš vyplnit nové heslo (alespoň 6 znaků)" pattern=".{6,}"}}
 		<label>Ověření hesla:</label>
 		{{input value=new_password2 type="password" name="pass" placeholder="nové heslo znovu" required=true title="Musíš vyplnit ověření nového hesla (alespoň 6 znaků)" pattern=".{6,}"}}
-		{{input type="submit" name="login"  class="btn btn-primary" value="Změnit"}}
+		{{#if submit_error}}
+			{{warning-general text=submit_error}}
+		{{/if}}
+		
+		<button type="submit" class="btn btn-primary" style="margin-top:20px; width:100%;">
+		    Změnit heslo!
+		</button>
+		{{#if submit_message}}
+			{{info-general text=submit_message}}
+		{{/if}}
 	{{/validatable-form}}
 </div>
