--- a/app/styles/base/typography.scss
+++ b/app/styles/base/typography.scss
@@ -69,6 +69,10 @@ h6 {
   font-weight: bold;
 }
 
+#vazba-text {
+  color: white;
+  font-weight: bold;
+}
 #profile-text {
   margin-right: 15px;
   margin-left: 7px;
