--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,6 +16,42 @@
         {{render "footer"}}
     </div>
 </div/>
+h
+<div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style hidden-xs" style="top:200px;">
+    <button type="button" class="btn btn-default btn-vertical" style="margin-top:-50px" data-toggle="modal" data-target="#zpetna-vazba">
+      <p id="vazba-text">Zpětná vazba</p>
+    </button>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="zpetna-vazba" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> Pošli nám odezvu na nový ksi web</h4>
+      </div>
+      <div class="modal-body">
+        <p>Máš nějaký tip nebo nápad, co a jak zlepšit? Vyskočila na tebe nějaká chyba?</p>
+
+        <p><b>Dej nám vědět, ať s tím můžeme něco dělat.</b></p>
+
+        <textarea class="form-control" rows="3" style="resize:none;"></textarea>
+        <br>
+        <p><b>Tvá mailová adresa - volitelně</b></p>
+
+        <p>Abychom se když tak mohli doptat na detaily.</p>
+
+        <input type="email" class="form-control" id="zpetna-vazba-email" placeholder="Email">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" style="width: 200px">Odeslat odezvu</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
 
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
   <div class="modal-dialog">
