header uprava a ine drobne buggy

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -57,5 +57,5 @@
 	    A: Ano, pokud jsi úspěšný řešitel semináře v kterémkoli roce a budeš se po maturitě hlásit na FI, budeš přijat.
 	  </div>
 	</div>
-	<p id="date-text">Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej <a href="mailto:ksi@fi.muni.cz">nám napsat.</a></p>
+	<p id="date-text">Máš jinou otázku, na kterou ti zde chybí odpověď? Neváhej nám napsat na <a href="mailto:ksi@fi.muni.cz">ksi@fi.muni.cz</a>.</p>
 </section>
