We speak czech!

--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -12,7 +12,7 @@
 	<h5>Soubory k odevzdání:</h5>
 	<div class="fileUpload btn btn-primary">
 		<span class="glyphicon glyphicon-open" aria-hidden="true"></span>
-    <span>Upload</span>
+    <span>Nahrát soubory</span>
 		{{file-input type="file" value=items multiple=true file_change="file_change" class="upload"}}
 
 	</div>
