Implement forgotten password

--- a/app/templates/forgot-password.hbs
+++ b/app/templates/forgot-password.hbs
@@ -4,8 +4,17 @@
   <div class="alert alert-info">
     Zapoměl/a jsi heslo? Napiš nám svůj e-mail a my ti na něj ihned pošleme nové přihlašovací údaje.
   </div>
-  <div class="password-email-container">
-    <input type="text" name="e-mail" placeholder="e-mail">
-    <input type="submit" name="login"  class="btn btn-primary" value="Odeslat">
-  </div>
+  {{#if finished}}
+  	{{info-general text="Email s instrukcemi ti byl poslán."}}
+  {{else}}
+	  <div class="password-email-container">
+	  	{{#validatable-form action="send" model=model}}
+		    {{input value=model.email type="email" class="form-control" id="email" required=true title="Je třeba vyplnit e-mail" placeholder="e-mail"}}
+		    <input type="submit" name="login"  class="btn btn-primary" value="Odeslat">
+		    {{#if general_error}}
+		    	{{warning-general text=general_error}}
+		    {{/if}}
+	    {{/validatable-form}}
+	  </div>
+  {{/if}}
 </section>
