--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -12,7 +12,7 @@
 
       <div class="form-group">
         <label for="email">E-mail:</label>
-        {{input value=model.email type="text" class="form-control" id="email" required=true title="Toto pole je třeba vyplnit" placeholder="e-mail"}}
+        {{input value=model.email type="email" class="form-control" id="email" required=true title="Toto pole je třeba vyplnit" placeholder="e-mail"}}
       </div>
 
       <div class="form-group">
