--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -45,9 +45,9 @@
 
 			<div class="form-group">
         <label for="gender">Pohlaví:</label>
-        {{#x-select value=model.gender class="form-control" id="gender" required=true}}
-          {{#x-option value="M"}}Muž{{/x-option}}
-          {{#x-option value="F"}}Žena{{/x-option}}
+        {{#x-select value=model.gender class="form-control" id="gender"}}
+          {{#x-option value="male"}}Muž{{/x-option}}
+          {{#x-option value="female"}}Žena{{/x-option}}
         {{/x-select}}
       </div>
 
@@ -75,8 +75,8 @@
         <label for="country">Země:</label>
         {{#x-select value=model.addr_country class="form-control"}}
           {{#each countries key="@index" as |item|}}
-            {{#x-option value=item selected=(is-equal item model.addr_country)}}
-              {{item}}
+            {{#x-option value=item.short}}
+              {{item.name}}
             {{/x-option}}
           {{/each}}
         {{/x-select}}
@@ -111,8 +111,8 @@
         <label for="country">Země:</label>
         {{#x-select value=model.school_country class="form-control"}}
           {{#each countries key="@index" as |item|}}
-            {{#x-option value=item selected=(is-equal item model.school_country)}}
-              {{item}}
+            {{#x-option value=item.short}}
+              {{item.name}}
             {{/x-option}}
           {{/each}}
         {{/x-select}}
@@ -128,7 +128,7 @@
         <label for="year-maturita">Rok maturity:</label>
         {{#x-select value=model.school_finish class="form-control"}}
           {{#each maturita_year key="@index" as |item|}}
-            {{#x-option value=item selected=(is-equal item model.school_finish)}}
+            {{#x-option value=item}}
               {{item}}
             {{/x-option}}
           {{/each}}
@@ -147,13 +147,13 @@
 
       <div class="form-group">
         <label for="tshirt">Velikost trička:</label>
-        <select class="form-control">
+        {{#x-select value=model.thisrt_size class="form-control"}}
           {{#each tshirt_size key="@index" as |item|}}
-            <option value="{{item}}" selected={{is-equal item model.tshirt_size}}>
+            {{#x-option value=item}}
               {{item}}
-            </option>
+            {{/x-option}}
           {{/each}}
-        </select>
+        {{/x-select}}
       </div>
 
 			<!--<div class="form-group">
