--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -67,7 +67,7 @@ h
       {{login_error_message}}
     {{/if}}
       <form>
-      {{input value=identification placeholder="přihlašovací jméno"}}
+      {{input value=identification placeholder="e-mail"}}
         {{input type="password" value=password placeholder="heslo"}}
         <input type="submit" name="login"  class="btn btn-primary" value="Přihlas se" {{action 'login'}}>
       </form>
