--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -1,5 +1,5 @@
 {{#unless session.isAuthenticated}}
-	{{warning-login text="nejsi přihlášen. Aby byly tvé operace užloženy, musíš se přihlásit."}}
+	{{warning-login text="nejsi přihlášen. Aby byly tvé operace uloženy, musíš se přihlásit."}}
 {{/unless}}
 
 <section id="graph" class="container content-section" style="text-align:justify">
