--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -9,6 +9,7 @@
 				<div id="graph-info-panel" class="panel panel-ksi stickycolumn">
 				  <div class="panel-heading panel-heading-ksi"><h4 align="center">Vysvětlivky</h4></div>
 				  <div class="panel-body">
+						<h5 align="center">Uzly</h5>
 						<img src="img/nodes/base/node-green.svg" class="node-info"/>Algoritmická úloha<br>
 						<img src="img/nodes/base/node-blue.svg" class="node-info"/>Programovací úloha<br>
 						<img src="img/nodes/base/node-red.svg" class="node-info"/>Speciální úloha<br>
@@ -21,7 +22,8 @@
 						<img src="img/nodes/base/node-done-icon.svg" class="node-info"/>Opravená úloha<br>
 						<img src="img/nodes/base/node-correcting-icon.svg" class="node-info"/>Neopravená úloha<br>
 						<hr>
-						prerekvizity TODO
+						<h5 align="center">Hrany</h5>
+						Pro odemčení úlohy musíte mít odemčené všechny hrany stejné barvy směrující do ní.
 				  </div>
 				</div>
 			</div>
