--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -17,12 +17,12 @@
 
       <div class="form-group">
         <label for="password">Heslo:</label>
-        {{input value=model.password type="password" pattern=".{6,}" class="form-control" id="password" placeholder="heslo" title="Heslo musí mít alespoň 6 znaků"}}
+        {{input value=model.password type="password" pattern=".{6,}" class="form-control" id="password" placeholder="heslo" title="Heslo musí mít alespoň 6 znaků" required=true}}
       </div>
 
       <div class="form-group">
         <label for="password2">Heslo:</label>
-        {{input value=model.password2 type="password" pattern=".{6,}" class="form-control" id="password2" placeholder="heslo znovu" title="Hesla se musejí shodovat"}}
+        {{input value=model.password2 type="password" pattern=".{6,}" class="form-control" id="password2" placeholder="heslo znovu" title="Hesla se musejí shodovat" required=true}}
       </div>
       {{#if password_error}}
         {{warning-general text="Hesla se neshodují"}}
@@ -45,7 +45,8 @@
 
 			<div class="form-group">
         <label for="gender">Pohlaví:</label>
-        {{#x-select value=model.gender class="form-control" id="gender"}}
+        {{#x-select value=model.gender class="form-control" id="gender" required=true}}
+          {{#x-option value=""}}Prosím vyber{{/x-option}}
           {{#x-option value="male"}}Muž{{/x-option}}
           {{#x-option value="female"}}Žena{{/x-option}}
         {{/x-select}}
