--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -1,7 +1,8 @@
 $footer-height: 70px;
 
 footer {
-    color: ksi-color('text-light');;
+    color: ksi-color('text-light');
+    position:inherit;
     bottom: 0;
     left: 0;
     width: 100%;
