typy modul panelov

--- a/app/styles/base/colors.scss
+++ b/app/styles/base/colors.scss
@@ -9,7 +9,9 @@ $ksi-colors: (
   'primary-dark': #233140,
   'secondary-dark': #2c3e50,
   'text-light': #ffffff,
-  'text-dark': #39393a
+  'text-dark': #39393a,
+  'correct-green': #5cb85c,
+  'incorrect-red': #d9534f
 );
 
 //
