--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -5,7 +5,7 @@
           <div style="margin-top:30px margin-bottom:30px;">
               <img src="{{model.profile_picture}}" style="width:100%; max-width:350px;margin-left:auto;margin-right:auto;display:block;" align="center"/> <!-- user image --> <!-- TODO default img -->
           </div>
-          {{picture-upload url="/profile/pic" actionReceiver=picture_field upload_finished="upload_finished" upload_failed="upload_failed" id="picture_input"}}
+          {{picture-upload actionReceiver=picture_field upload_finished="upload_finished" upload_failed="upload_failed" id="picture_input"}}
           <button type="button" class="btn btn-primary" style="margin-top:20px; width:100%;" {{action "upload_pic"}}>
             <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span>
               Nahraj fotografii
