--- a/app/styles/components/panels.scss
+++ b/app/styles/components/panels.scss
@@ -62,6 +62,10 @@
   background: ksi-color-level('primary-orange', 8);
 }
 
+.panel-achievements {
+  background: ksi-color-level('primary-orange', 8);
+}
+
 .panel-profile-assignment {
   border: 2px;
   border-style: solid;
