--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -29,9 +29,9 @@
                     <div class="collapse navbar-collapse" id="bs-task-navbar-collapse">
                         <ul class="nav navbar-nav">
                             {{#link-to "task.assignment" tagName="li"}}<a href="{{view.href}}">Zadání</a>{{/link-to}}
-                            {{#link-to "task.submission" tagName="li"}}<a href="{{view.href}}">Odevzdání</a>{{/link-to}}
                             {{#link-to "task.statistics" tagName="li"}}<a href="{{view.href}}">Statistika</a>{{/link-to}}
                             {{#link-to "task.discussion" tagName="li"}}<a href="{{view.href}}">Diskuze</a>{{/link-to}}
+                            {{#link-to "task.evaluation" tagName="li"}}<a href="{{view.href}}">Hodnocení</a>{{/link-to}}
                             {{#link-to "task.solution" tagName="li"}}<a href="{{view.href}}">Řešení</a>{{/link-to}}
                         </ul>
                     </div><!-- /.navbar-collapse -->
