--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,29 +1,27 @@
 <section class="container content-section" style="margin-bottom:40px; margin-top:50px">
 	<h2 id="about">O KSI</h2>
-	<p>KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské a matematické myšlení.</p>
-
+	<p>KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení.</p>
 	<h3>Jak seminář probíhá?</h3>
-	<p>Každý ročník semináře se skládá z pěti tematických vln. Sada vždy začíná úvodními příklady, ve kterých vás, řešitele, uvedeme do tématu, vysvětlíme základní myšlenky, pojmy a triky. Následují soutěžní úlohy různého charakteru, na jejichž vyřešení a sepsání řešení máte zhruba jeden měsíc. Zatímco nejjednodušší úlohy by po přečtení úvodního povídání neměly dělat problémy ani úplným začátečníkům, nad tou nejtěžší se může zapotit i ostřílený řešitel programátorských soutěží.</p>
-	<p>Zadání zveřejňujeme na našich internetových stránkách a řešitelům je zasíláme i poštou. Odevzdávání úloh a další komunikace pak probíhá přes náš webový systém. Po termínu odevzdání vaše řešení opravíme, obodujeme a okomentujeme. Po vyhodnocení poslední sady úloh jsou nejúspěšnější řešitelé pozváni na týdenní soustředění. Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.</p>
-	<p>První ročník semináře proběhl již v roce 2006/2007. Zadání úloh, řešení či výsledkové listiny najdete v sekci Archiv.</p>
+	<p>Každý ročník semináře se skládá z pěti vln. Na začátku každé vlny tě čeká několik úvodních úkolů, které ti představí dané téma, vysvětlí základní myšlenky a pojmy a procvičíš si na nich základní dovednosti, které budeš potřebovat k vyřešení soutěžních úloh. Soutěžní úlohy jsou pak různého charakteru, na jejichž vyřešení a sepsání řešení máš zhruba jeden měsíc. Zatímco nejjednodušší úlohy by po přečtení úvodního povídání neměly dělat problémy ani úplným začátečníkům, nad tou nejtěžší se může zapotit i ostřílený řešitel programátorských soutěží.</p>
+	<p>Zadání najdeš na našich internetových stránkách. Odevzdávání úloh a další komunikace pak probíhá přes náš webový systém. Po termínu odevzdání tvoje řešení opravíme, obodujeme a okomentujeme. Po vyhodnocení poslední vlny úloh jsou nejúspěšnější řešitelé pozváni na týdenní soustředění. Úspěšní řešitelé semináře (ti, kteří dosáhnou alespoň 60 % celkového počtu bodů) jsou zároveň přijati na Fakultu informatiky MU bez přijímacích zkoušek.</p>
 
 	<h3>Jaké úlohy mám očekávat?</h3>
-	<p>Vaším úkolem ve většině úloh bude řešení algoritmického či programátorského problému. Nikdy ale nebudete potřebovat znát nějaký konkrétní programovací jazyk; naopak, někdy vám poskytneme prostředky pro řešení sami - budou i překvapivé nebo netradiční.</p>
-	<p>Některé z našich úloh mohou být složité nebo pracné, i když s dobrým nápadem se většinou dají vyřešit rychle a elegantně. Není třeba vyřešit všechny úlohy sady - pošlete, co vyřešíte, zbytek si po uzavření sady můžete přečíst ve vzorovém řešení. Také není nutné, abyste měli úlohu kompletně dořešenou. I pokud máte jen nějaké nápady co s ní, napište nám je a my vaši snahu určitě oceníme.</p>
+	<p>Tvým úkolem ve většině úloh bude řešení algoritmického či programátorského problému. Někdy bude stačit popsat řešení jen obecně pomocí pseudokódu, jindy po tobě budeme chtít i program v Pythonu. Pokud programovat neumíš nebo programuješ v jiném jazyce, nemusíš se ničeho bát. Python tě pomocí cvičných příkladů rychle naučíme. Vždyť přece kolik jazyků umíš, tolikrát jsi člověkem. ;)</p>
+	<p>Některé z našich úloh mohou být složité nebo pracné, i když s dobrým nápadem se většinou dají vyřešit rychle a elegantně. Není třeba vyřešit všechny úlohy - pošli nám, co zvládneš a zbytek si po uzavření vlny můžeš přečíst ve vzorovém řešení. Také není nutné, abys měl(a) úlohu kompletně dořešenou. I pokud máš jen nějaké nápady co s ní, napiš nám je a my tvoji snahu určitě oceníme.</p>
 
 	<h3>Proč se účastnit?</h3>
 	<ul>
-	<li>Procvičíte si své schopnosti, logické a abstraktní myšlení. Získáte nové znalosti a naučíte se nové algoritmy běžně používané v každodenní programátorské praxi.</li>
+		<li>Procvičíš si své schopnosti, logické a abstraktní myšlení. Získáš nové znalosti a naučíš se nové algoritmy běžně používané v každodenní programátorské praxi.</li>
 
     <li>Naučíte se své myšlenky jasně formulovat a srozumitelně vyjadřovat</li>
 
     <li>Připravíte se lépe na matematickou olympiádu kategorie P a jiné soutěže. Trénink je základ úspěchu!</li>
 
-    <li>Přiblíží se vám látka vyučovaná na vysokých školách. Budete schopni se lépe rozhodnout, co chcete studovat, a pokud se rozhodnete pro informatiku, získáte mírný náskok na své budoucí spolužáky.</li>
+    <li>Přiblíží se ti látka vyučovaná na vysokých školách. Dokážeš se lépe rozhodnout, co chceš studovat, a pokud se rozhodneš pro informatiku, získáš mírný náskok na své budoucí spolužáky.</li>
 
-    <li>Budete-li patřit mezi úspěšné řešitele, budete přijati na Fakultu informatiky MU bez přijímacích zkoušek.</li>
+		<li>Budeš-li patřit mezi úspěšné řešitele, můžeš se těšit na přijetí na Fakultu informatiky MU bez přijímacích zkoušek.</li>
 
-    <li>A hlavně, když budete svědomitě řešit, jistě vás nemine odměna v podobě týdenního soustředění.</li>
+    <li>A hlavně, když budeš svědomitě řešit, jistě tě nemine odměna v podobě týdenního soustředění.</li>
 
 	</ul>
 
@@ -40,7 +38,7 @@
 	<div class="panel panel-ksi">
 	  <div class="panel-heading panel-heading-ksi">Q: Kdo je úspěšný řešitel semináře?</div>
 	  <div class="panel-body">
-	    A: Každý, kdo dosáhne alespoň 60% celkového počtu bodů. Za každou z pěti sad lze získat 50 bodů, celkem tedy musíš získat alespoň 0.6*250 = 150 bodů.
+	    A: Každý, kdo dosáhne alespoň 60% celkového počtu bodů.
 	  </div>
 	</div>
 
