--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -29,11 +29,11 @@
           margin: 0 auto;
           text-align: center;">
           <div class="col-xs-12 col-sm-4">
-            {{#link-to "achievements"}}
-              <img src="img/info-achievement.svg" style="max-width:90%;"/>
+            {{#link-to "tasks"}}
+              <img src="img/info-ksi.svg" style="max-width:90%;"/>
             {{/link-to}}
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              "Posbírej je všechny!" Během řešení semináře můžeš nejen za překonávání milníků, zajímavá řešení (jak v dobrém, tak špatném slova smyslu) a účast na akcích získat odznáčky. Některé odznáčky jsou vzácné, jiné relativně běžné.
+              KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty Informatiky Masarykovy Univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské, matematické a logické myšlení. Seminář je uzpůsoben jak pro úplné začátečníky, kteří si na jednodušších příkladech procvičí danou problematiku, tak pro zkušenější řešitele, kteří mají možnost základy přeskočit a rovnou se pustit do záludnějších úloh.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
@@ -41,17 +41,19 @@
               <img src="img/info-kscuk.svg" style="max-width:90%;"/>
             </a>
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              Úspěšní řešitelé semináře jsou pozvání na týdenní soustředění K-SCUK, které je společné pro KSI a ekologický seminář KEKS. Náplní soustředění je jak odborný program, kdy se opět naučíte něco nového z informatiky, tak doprovodný zážitkový program. Odborný program se skládá ze zajímavých přednášek, které jdou nad rámec běžné výuky na školách.
+              Při řešení našeho semináře nemusíš jen sedět doma za počítačem. Během roku pro všechny řešitele pravidelně pořádáme výlety (Ksílety), na kterých se můžeš seznámit s ostatními řešiteli, osobně poznat organizátory a zahrát si kupu zajímavých her.
+V září se mohou úspěšní řešitelé těšit na týdenní soustředění K-SCUK,  které je společné pro KSI a ekologický seminář KEKS. Náplní soustředění je jak odborný program, díky kterému se opět naučíš něco nového z informatiky, tak bohatý doprovodný program.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
-            {{#link-to "tasks"}}
-              <img src="img/info-ksi.svg" style="max-width:90%;"/>
+            {{#link-to "achievements"}}
+              <img src="img/info-achievement.svg" style="max-width:90%;"/>
             {{/link-to}}
             <p class="about-paragraph" style="font-size:18px;" align="justify">
-              KSI, neboli Korespondenční Seminář z Informatiky, je celoroční soutěž pro středoškoláky z České i Slovenské republiky organizovaná studenty Fakulty informatiky Masarykovy univerzity. Cílem semináře je seznámit řešitele se zajímavými oblastmi informatiky a procvičit programátorské a matematické myšlení.
+              V průběhu řešení semináře můžeš za překonávání milníků, odevzdávání zajímavých řešení nebo třeba za účast na KSI akcích získat nejrůznější odznáčky. Podaří se ti jich získat co nejvíc? Ulovíš i ty nejvzácnější? Soutěž s ostatními řešiteli a posbírej je všechny!
             </p>
           </div>
+
           <div class="col-sm-12">
             {{#link-to "about" id="more-about" class="white-link"}}<h2>Zjistit více!</h2>{{/link-to}}
           </div>
