--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -171,7 +171,9 @@
 	        <h2>Registruj se</h2>
 	      </button>
         {{#if general_error}}
-          {{warning-general text=general_error}}
+					<div style="margin-top: 20px;">
+	          {{warning-general text=general_error}}
+					</div>
         {{/if}}
 			</div>
 		</div>
