--- a/app/templates/task/assignment.hbs
+++ b/app/templates/task/assignment.hbs
@@ -6,52 +6,47 @@
     <a href="/tasks/{{model.id}}/assignment/pdf"><button class="btn btn-task btn-primary">Stáhnout pdf</button></a>
   </div>
   <div style="margin-left:20px">
-    {{log "Přihlášení" session.isAuthenticated}}
     {{#if opened}}
       {{#if session.isAuthenticated}}
-        {{#if show_submission}}
-          {{#each model.modules as |module index|}}
-            <hr>
-            <div class="panel panel-module-{{module-type module}}" style="margin-left:0px">
-              <div class="panel-heading panel-heading-module-{{module-type module}}">
-                  Nazev modulu
-                  {{#if module.is_correct}}
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-                  {{/if}}
-                  {{#if module.is_incorrect}}
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                  {{/if}}
-              </div>
-              <div class="panel-body">
-              {{#if module.is_programming}}
-                {{code-module module=module id=module.id result="result" error="error"}}
-              {{/if}}
-              {{#if module.is_quiz}}
-                {{quiz-module module=module id=module.id result="result" error="error"}}
-              {{/if}}
-              {{#if module.is_general}}
-                {{file-module module=module id=module.id result="result" error="error"}}
-              {{/if}}
-              {{#if module.is_sortable}}
-                {{sortable-module module=module id=module.id result="result" error="error"}}
-              {{/if}}
-              {{#if module.is_text}}
-                {{plaintext-module module=module result="result"}}
-              {{/if}}
-              <button class="btn btn-task btn-primary" style="margin-top:20px" {{action "submit"}}>
-                {{#if submit_error}} Zkusit odevzdat znovu {{else}}Odevzdat{{/if}} <!-- TODO doladit button -->
-              </button>
+        {{#each model.modules as |module index|}}
+          <hr>
+          <div class="panel panel-module-{{module.state}}" style="margin-left:0px">
+            <div class="panel-heading panel-heading-module-{{module.state}}">
+                {{module.name}}
+                {{#if module.is_correct}}
+                  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                {{/if}}
+                {{#if module.is_incorrect}}
+                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                {{/if}}
             </div>
+            <div class="panel-body">
+              {{#unless module.is_correct}}
+                {{#if module.is_programming}}
+                  {{code-module module=module id=module.id result="result" error="error"}}
+                {{/if}}
+                {{#if module.is_quiz}}
+                  {{quiz-module module=module id=module.id result="result" error="error"}}
+                {{/if}}
+                {{#if module.is_general}}
+                  {{file-module module=module id=module.id result="result" error="error"}}
+                {{/if}}
+                {{#if module.is_sortable}}
+                  {{sortable-module module=module id=module.id result="result" error="error"}}
+                {{/if}}
+                {{#if module.is_text}}
+                  {{plaintext-module module=module result="result"}}
+                {{/if}}
+              {{/unless}}
+              <button class="btn btn-task btn-primary" style="margin-top:20px" {{action "trigger" module.id}}>
+                {{#if module.is_correct}} Zkusit odevzdat znovu {{else}}Odevzdat{{/if}}
+              </button>
           </div>
-          {{/each}}
-          {{#if submit_error}}
-            {{warning-general text=submit_error}}
-          {{/if}}<!-- TODO zmazat -->
-            <button class="btn btn-task btn-primary" style="margin-top:20px" {{action "submit"}}>{{#if submit_error}} Zkusit odevzdat znovu {{else}}Odevzdat{{/if}}</button>
-          {{else}}
-            {{info-general text="Tuto úlohu jsi už odevzdal."}}
-            <button class="btn btn-task btn-primary" {{action "new_submit"}}>Znovu odevzdat úlohu</button>
-          {{/if}}
+        </div>
+        {{/each}}
+        <button class="btn btn-task btn-primary" style="margin-top:20px" {{action "submit"}}>{{#if submit_error}}
+          Zkusit odevzdat znovu {{else}}Odevzdat{{/if}}
+        </button>
       {{else}}
           {{warning-login text="Úlohu nemůžeš odevzdat dokud se nepřihlásíš!"}}
       {{/if}}
